--- a/package.json
+++ b/package.json
@@ -17,21 +17,41 @@
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.20",
     "@docusaurus/preset-classic": "2.0.0-beta.20",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.1.1",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "classnames": "^2.3.1",
+    "crossbell.js": "^0.5.7",
     "daisyui": "^2.15.0",
+    "ethers": "^5.6.6",
     "gsap": "^3.10.4",
+    "lodash.debounce": "^4.0.8",
     "postcss": "^8.4.14",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
+    "react-confetti": "^6.1.0",
     "react-dom": "^17.0.2",
-    "typeit-react": "2.3.3"
+    "react-toastify": "^9.0.1",
+    "react-use": "^17.4.0",
+    "typeit-react": "2.3.3",
+    "web3modal": "^1.9.7"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.0-beta.20",
     "@tsconfig/docusaurus": "^1.0.5",
+    "assert": "^2.0.0",
+    "babel-plugin-macros": "^3.1.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "url": "^0.11.0",
+    "util": "^0.12.4"
   },
   "browserslist": {
     "production": [
