--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mdx-js/react": "^1.6.22",
     "@walletconnect/web3-provider": "^1.7.8",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "crossbell.js": "^0.5.7",
     "daisyui": "^2.15.0",
